infra/k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barkly-postgres
  namespace: barkly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barkly-postgres
  template:
    metadata:
      labels:
        app: barkly-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: barkly-postgres-pvc

      resources:
        requests:
          cpu: 250m
          memory: 512Mi

        limits:
          cpu: "1"
          memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: barkly-postgres
  namespace: barkly
spec:
  selector:
    app: barkly-postgres
  ports:
    - port: 5432
      targetPort: 5432
